# sopel-bugzilla

./: NEWS  README.md  pyproject.toml  setup.cfg  setup.py
sopel_bugzilla/: __init__.py  plugin.py
